--- a/main.ipynb
+++ b/main.ipynb
@@ -16,16 +16,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-<<<<<<< HEAD
-    "import re # regular expressions"
-=======
-<<<<<<< HEAD
-    "import re # regular expressions"
-=======
     "import re # regular expressions\n",
-    "from nltk.corpus import stopwords"
->>>>>>> f127e0ef7f49157c36749c0b773224a229cee703
->>>>>>> c3a4995270f5816181e5e9f5a30bbc2c9399cd6c
+    "import string"
    ]
   },
   {
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preprocessing"
+    "## Dataset"
    ]
   },
   {
@@ -103,20 +95,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type x : <class 'numpy.ndarray'> , type y : <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
-    "x = dataset.iloc[:, 2].values # author text\n",
-    "y = dataset.iloc[:, 0].values # author name"
+    "x = dataset.iloc[:, 2].values.astype(\"str\") # author text\n",
+    "y = dataset.iloc[:, 0].values.astype(\"str\") # author name\n",
+    "\n",
+    "print(f\"type x : {type(x)} , type y : {type(y)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocesing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# turkish stop words\n",
+    "stop_words = load_stop_words(\"stopwordsTR\\stopwords.txt\")\n",
+    "\n",
+    "# Her bir metni temizleme işlemi\n",
+    "for i in range(len(x)):\n",
+    "    # Convert to lowercase - Küçük harfe çevirme\n",
+    "    x[i] = x[i].lower()\n",
+    "    \n",
+    "    # Remove escape characters - Kaçış karakterlerini kaldırma\n",
+    "    x[i] = re.sub(r'[\\r\\n]', ' ', x[i]) \n",
+    "    \n",
+    "    # Remove unnecessary characters - Gereksiz karakterleri kaldırma\n",
+    "    x[i] = re.sub(r'[^a-zA-ZğüşıöçĞÜŞİÖÇ\\s]', '', x[i])\n",
+    "    \n",
+    "    # Remove stop words - Stop kelimeleri kaldırma\n",
+    "    x[i] = ' '.join([word for word in x[i].split() if word not in stop_words])\n",
+    "    \n",
+    "    # Remove punctuation marks - Noktalama işaretlerini kaldırma\n",
+    "    x[i] = x[i].translate(str.maketrans('', '', string.punctuation))\n",
+    "    \n",
+    "    # Remove repeating spaces - Tekrar eden boşlukları kaldırma\n",
+    "    x[i] = re.sub(r'\\s+', ' ', x[i])\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
