--- a/main.ipynb
+++ b/main.ipynb
@@ -150,6 +150,88 @@
     "    x[i] = re.sub(r'\\s+', ' ', x[i])\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert to feature vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF (Term Frequency-Inverse Document Frequency):\n",
+    "It is a statistical method used to measure the importance of words in text documents. TF-IDF vectors combine each word's frequency (TF) in the text and its rarity (IDF) across all documents.\n",
+    "\n",
+    "Metin belgelerindeki kelimelerin önemini ölçmek için kullanılan bir istatistiksel yöntemdir. TF-IDF vektörleri, her kelimenin metindeki sıklığını (TF) ve tüm belgelerdeki nadirliğini (IDF) birleştirir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word Embeddings (Kelime Gömme):\n",
+    "It represents words with numerical vectors using word embedding models with techniques such as Word2Vec, GloVe, FastText. These vectors better reflect the meaning of the word.\n",
+    "\n",
+    "Word2Vec, GloVe, FastText gibi tekniklerle kelime gömme modelleri kullanarak kelimeleri sayısal vektörlerle temsil eder. Bu vektörler, kelimenin anlamını daha iyi yansıtır."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BoW (Bag of Words):\n",
+    "It creates a vector that represents the presence of words in the text. BoW vectors use a frequency-based approach to represent the presence or absence of each word.\n",
+    "\n",
+    "Metinde geçen kelimelerin varlığını temsil eden bir vektör oluşturur. BoW vektörleri, her bir kelimenin varlığını veya yokluğunu temsil eden sıklık tabanlı bir yaklaşım kullanır."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## N-gram Approach(N-gram Yaklaşımı):\n",
+    "It creates feature vectors by taking into account consecutive word groups of the text.\n",
+    "\n",
+    "Metnin ardışık kelime gruplarını dikkate alarak özellik vektörleri oluşturur. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
